# smartrecruiters-sync

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
.trunk/: trunk.yaml
smartrecruiters_sync/: extract.py  reports.json
tests/: test_smartrecruiters_sync.py
