[tool.poetry]
name = "smartrecruiters-sync"
version = "0.1.0"
description = ""
authors = ["Charlie Bini <5003326+cbini@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
requests = "^2.26.0"
python-dotenv = "^0.19.1"
google-cloud-storage = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
